--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -232,6 +232,7 @@
     <Compile Include="Misc\DataRegister.cs" />
     <Compile Include="Server\World.cs" />
     <Compile Include="WorldMod\WorldGen.cs" />
+    <Compile Include="WorldMod\WorldIO.cs" />
     <Compile Include="WorldMod\WorldModify.cs" />
     <Compile Include="Messages\messageBuffer.cs" />
     <Compile Include="NetPlay.cs" />
