--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -175,6 +175,7 @@
     <Compile Include="Definitions\Tile\TileAction.cs" />
     <Compile Include="Definitions\Tile\TileType.cs" />
     <Compile Include="Collections\Registry.cs" />
+    <Compile Include="Misc\ChatColour.cs" />
     <Compile Include="Server\LoadMonitor.cs" />
     <Compile Include="Shops\ArmsDealerShop.cs" />
     <Compile Include="Shops\ClothierShop.cs" />
