--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -261,6 +261,9 @@
     <Compile Include="Server\ProgramThread.cs" />
     <Compile Include="Networking\Connection.cs" />
     <Compile Include="Networking\ClientConnection.cs" />
+    <Compile Include="Messages\ChestUnlockMessage.cs" />
+    <Compile Include="Messages\NPCAddBuffMessage.cs" />
+    <Compile Include="Messages\PlayerAddBuffMessage.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
