Ported the rest of NPC.cs from 1.0.6, but zombies desync. Made Registry.Alter a tad more pleasant to look at.

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -264,6 +264,7 @@
     <Compile Include="Messages\ChestUnlockMessage.cs" />
     <Compile Include="Messages\NPCAddBuffMessage.cs" />
     <Compile Include="Messages\PlayerAddBuffMessage.cs" />
+    <Compile Include="Misc\CloningExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
