Removed service references, removed Json reference, and set Yaml and Terraria references to not copy locally.

--- a/TDSMPermissions/TDSMPlugin/TDSMPermissions.csproj
+++ b/TDSMPermissions/TDSMPlugin/TDSMPermissions.csproj
@@ -36,9 +36,6 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>.\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -50,12 +47,15 @@
       <SpecificVersion>False</SpecificVersion>
       <ExecutableExtension>.exe</ExecutableExtension>
       <HintPath>..\..\Terraria_Server\bin\Debug\Terraria_Server.exe</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="YaTools.Abstract.Net4">
       <HintPath>.\YaTools.Abstract.Net4.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="YaTools.Yaml.Core.Net4">
       <HintPath>.\YaTools.Yaml.Core.Net4.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -64,9 +64,6 @@
     <Compile Include="Properties.cs" />
     <Compile Include="TDSMPermissions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
