--- a/Regions/Regions.csproj
+++ b/Regions/Regions.csproj
@@ -55,7 +55,7 @@
     <Compile Include="Region\Selection.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\TDSMPermissions\TDSMPlugin\TDSMPermissions.csproj">
+    <ProjectReference Include="..\TDSMPermissions\TDSMPermissions\TDSMPermissions.csproj">
       <Project>{59C00003-40C8-4AB6-914A-AF0499BF82F9}</Project>
       <Name>TDSMPermissions</Name>
     </ProjectReference>
