--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -134,6 +134,7 @@
     <Compile Include="Events\PlayerMoveEvent.cs" />
     <Compile Include="Events\PlayerPvPChangeEvent.cs" />
     <Compile Include="Events\PlayerTeleportEvent.cs" />
+    <Compile Include="Events\ServerPluginsLoaded.cs" />
     <Compile Include="Events\TimeChangedEvent.cs" />
     <Compile Include="Messages\ChestItemMessage.cs" />
     <Compile Include="Messages\ConnectionRequestMessage.cs" />
