Added packet buffering for potentially significant bandwidth savings. Added /maxplayers for changing the max number of player slots.

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Messages\MessageHandler.cs" />
     <Compile Include="Networking\SlotManager.cs" />
     <Compile Include="Messages\DisconnectMessage.cs" />
+    <Compile Include="Misc\ArrayDeque.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
