--- a/TDSMPermissions/TDSMPermissions/TDSMPermissions.csproj
+++ b/TDSMPermissions/TDSMPermissions/TDSMPermissions.csproj
@@ -49,8 +49,13 @@
       <HintPath>..\..\Terraria_Server\bin\Debug\Terraria_Server.exe</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="YaTools.Yaml.Core.Net4">
-      <HintPath>.\YaTools.Yaml.Core.Net4.dll</HintPath>
+    <Reference Include="YaTools.Abstract.Net4, Version=1.0.0.0, Culture=neutral, PublicKeyToken=96dfc321948ee54c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Libs\YaTools.Abstract.Net4.dll</HintPath>
+    </Reference>
+    <Reference Include="YaTools.Yaml.Core.Net4, Version=4.0.0.0, Culture=neutral, PublicKeyToken=96dfc321948ee54c, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>Libs\YaTools.Yaml.Core.Net4.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -59,6 +64,11 @@
     <Compile Include="Properties.cs" />
     <Compile Include="TDSMPermissions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <Content Include="Libs\YaTools.Abstract.Net4.dll" />
+    <Content Include="Libs\YaTools.Yaml.Core.Net4.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
