--- a/Terraria_Server/app.config
+++ b/Terraria_Server/app.config
@@ -2,6 +2,11 @@
 <configuration>
   <runtime>
     <loadFromRemoteSources enabled="true"/>
+
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <probing privatePath="Plugins\Libs;Plugins/Libs"/>
+    </assemblyBinding>
+    
   </runtime>
   <startup useLegacyV2RuntimeActivationPolicy="true">
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/>
