Cleaned up a few little things

--- a/TDSMPermissions/TDSMPermissions/TDSMPermissions.csproj
+++ b/TDSMPermissions/TDSMPermissions/TDSMPermissions.csproj
@@ -51,11 +51,11 @@
     </Reference>
     <Reference Include="YaTools.Abstract.Net4, Version=1.0.0.0, Culture=neutral, PublicKeyToken=96dfc321948ee54c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>Libs\YaTools.Abstract.Net4.dll</HintPath>
+      <HintPath>.\YaTools.Abstract.Net4.dll</HintPath>
     </Reference>
     <Reference Include="YaTools.Yaml.Core.Net4, Version=4.0.0.0, Culture=neutral, PublicKeyToken=96dfc321948ee54c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>Libs\YaTools.Yaml.Core.Net4.dll</HintPath>
+      <HintPath>.\YaTools.Yaml.Core.Net4.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -66,10 +66,6 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
-  <ItemGroup>
-    <Content Include="Libs\YaTools.Abstract.Net4.dll" />
-    <Content Include="Libs\YaTools.Yaml.Core.Net4.dll" />
-  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
