--- a/Terraria_Server/app.config
+++ b/Terraria_Server/app.config
@@ -4,7 +4,7 @@
     <loadFromRemoteSources enabled="true"/>
 
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <probing privatePath="Plugins\Libs;Plugins/Libs"/>
+      <probing privatePath="Plugins/Libs"/>
     </assemblyBinding>
     
   </runtime>
