--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -268,6 +268,7 @@
     <Compile Include="Messages\DisconnectMessage.cs" />
     <Compile Include="Misc\ArrayDeque.cs" />
     <Compile Include="Messages\MessageDispatcher.cs" />
+    <Compile Include="Networking\LiquidUpdateBuffer.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
