--- a/Regions/Regions.csproj
+++ b/Regions/Regions.csproj
@@ -47,12 +47,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands.cs" />
+    <Compile Include="Nodes\DoorChange.cs" />
+    <Compile Include="Nodes\LiquidFlow.cs" />
+    <Compile Include="Nodes\ProjectileUse.cs" />
+    <Compile Include="Nodes\TileBreak.cs" />
+    <Compile Include="Nodes\TilePlace.cs" />
     <Compile Include="Properties.cs" />
     <Compile Include="Regions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Region\Region.cs" />
-    <Compile Include="Region\RegionManager.cs" />
-    <Compile Include="Region\Selection.cs" />
+    <Compile Include="RegionWork\Region.cs" />
+    <Compile Include="RegionWork\RegionManager.cs" />
+    <Compile Include="RegionWork\Selection.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Terraria_Server\Terraria_Server.csproj">
