--- a/TDSMPermissions/TDSMPermissions/TDSMPermissions.csproj
+++ b/TDSMPermissions/TDSMPermissions/TDSMPermissions.csproj
@@ -43,12 +43,6 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Terraria_Server, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <ExecutableExtension>.exe</ExecutableExtension>
-      <HintPath>..\..\Terraria_Server\bin\Debug\Terraria_Server.exe</HintPath>
-      <Private>False</Private>
-    </Reference>
     <Reference Include="YaTools.Abstract.Net4, Version=1.0.0.0, Culture=neutral, PublicKeyToken=96dfc321948ee54c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\YaTools.Abstract.Net4.dll</HintPath>
@@ -65,7 +59,12 @@
     <Compile Include="TDSMPermissions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <ProjectReference Include="..\..\Terraria_Server\Terraria_Server.csproj">
+      <Project>{6B42E70C-75CD-410B-9D4A-3EA75B6F5176}</Project>
+      <Name>Terraria_Server</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
