--- a/TDSMPlugin/TDSMPlugin/TDSMPlugin.csproj
+++ b/TDSMPlugin/TDSMPlugin/TDSMPlugin.csproj
@@ -40,11 +40,6 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Terraria_Server, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
-      <SpecificVersion>False</SpecificVersion>
-      <ExecutableExtension>.exe</ExecutableExtension>
-      <HintPath>..\..\Terraria_Server\bin\Debug\Terraria_Server.exe</HintPath>
-    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\PluginCommands.cs" />
@@ -54,6 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Terraria_Server\Terraria_Server.csproj">
+      <Project>{6B42E70C-75CD-410B-9D4A-3EA75B6F5176}</Project>
+      <Name>Terraria_Server</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
