Adding in user parsing.  Not yet working.

--- a/TDSMPermissions/TDSMPermissions/TDSMPermissions.csproj
+++ b/TDSMPermissions/TDSMPermissions/TDSMPermissions.csproj
@@ -46,15 +46,18 @@
     <Reference Include="YaTools.Abstract.Net4, Version=1.0.0.0, Culture=neutral, PublicKeyToken=96dfc321948ee54c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\YaTools.Abstract.Net4.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="YaTools.Yaml.Core.Net4, Version=4.0.0.0, Culture=neutral, PublicKeyToken=96dfc321948ee54c, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>.\YaTools.Yaml.Core.Net4.dll</HintPath>
+      <Private>False</Private>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands\PluginCommands.cs" />
     <Compile Include="Definitions\Group.cs" />
+    <Compile Include="Definitions\User.cs" />
     <Compile Include="Properties.cs" />
     <Compile Include="TDSMPermissions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -63,6 +66,7 @@
     <ProjectReference Include="..\..\Terraria_Server\Terraria_Server.csproj">
       <Project>{6B42E70C-75CD-410B-9D4A-3EA75B6F5176}</Project>
       <Name>Terraria_Server</Name>
+      <Private>False</Private>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
