--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003" ToolsVersion="4.0">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -171,6 +171,7 @@
     <Compile Include="Misc\ChatColor.cs" />
     <Compile Include="Misc\ExitException.cs" />
     <Compile Include="Permissions\Node.cs" />
+    <Compile Include="Permissions\PermissionManager.cs" />
     <Compile Include="Server\LoadMonitor.cs" />
     <Compile Include="Commands\ConsoleSender.cs" />
     <Compile Include="Collision.cs" />
@@ -290,7 +291,5 @@
   -->
   <ItemGroup />
   <ItemGroup />
-  <ItemGroup>
-    <Folder Include="Plugins\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
