Added Player Teleport, ServerState and console message events

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -195,6 +195,7 @@
     <Compile Include="Rectangle.cs" />
     <Compile Include="Server\Server.cs" />
     <Compile Include="Server\Packet.cs" />
+    <Compile Include="Server\ServerState.cs" />
     <Compile Include="Server\UpdateManager.cs" />
     <Compile Include="Chest.cs" />
     <Compile Include="Sign.cs" />
