--- a/Restrict/Restrict.csproj
+++ b/Restrict/Restrict.csproj
@@ -1,11 +1,11 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <ProjectGuid>{0FEC21CD-5ABA-4A5D-A4F3-EB65F07DF68C}</ProjectGuid>
+    <ProjectGuid>{D3090753-F6FB-476A-89DF-79DA641086B9}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>RestrictPlugin</RootNamespace>
@@ -40,7 +40,7 @@
     <Reference Include="System.Xml" />
     <Reference Include="Terraria_Server, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\t9\Terraria_Server\bin\Debug\Terraria_Server.exe</HintPath>
+      <HintPath>..\Terraria_Server\bin\Debug\Terraria_Server.exe</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
@@ -61,7 +61,5 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup>
-    <Folder Include="NDesk.Options\" />
-  </ItemGroup>
+  <ItemGroup />
 </Project>
