Added a few things for ease of use

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -272,7 +272,9 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Definitions\Items.xml" />
+    <EmbeddedResource Include="Definitions\Items.xml">
+      <SubType>Designer</SubType>
+    </EmbeddedResource>
     <EmbeddedResource Include="Definitions\ItemsByName.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
