--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -107,6 +107,8 @@
     <Reference Include="System" />
     <Reference Include="System.Core">
     </Reference>
+    <Reference Include="System.Data.Entity" />
+    <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Xml.Linq">
     </Reference>
     <Reference Include="System.Data.DataSetExtensions">
@@ -125,7 +127,7 @@
     <Compile Include="Definitions\Time.cs" />
     <Compile Include="Messages\ChestItemMessage.cs" />
     <Compile Include="Messages\ConnectionRequestMessage.cs" />
-    <Compile Include="Messages\TDCM\ClientModMessage.cs" />
+    <Compile Include="TDCM\Packets\ClientModMessage.cs" />
     <Compile Include="Messages\DamageNPCMessage.cs" />
     <Compile Include="Messages\DoorUpdateMessage.cs" />
     <Compile Include="Messages\EnterZoneMessage.cs" />
@@ -158,7 +160,9 @@
     <Compile Include="Messages\StrikeNPCMessage.cs" />
     <Compile Include="Messages\StrikePlayerMessage.cs" />
     <Compile Include="Messages\SummonSkeletronMessage.cs" />
-    <Compile Include="Messages\TDCM\SpawnNPC.cs" />
+    <Compile Include="TDCM\Packets\QuestsInfo.cs" />
+    <Compile Include="TDCM\Packets\Quests\QuestActions.cs" />
+    <Compile Include="TDCM\Packets\SpawnNPC.cs" />
     <Compile Include="Messages\TileBreakMessage.cs" />
     <Compile Include="Messages\TileSquareMessage.cs" />
     <Compile Include="Messages\UpdatePlayersMessage.cs" />
@@ -204,6 +208,8 @@
     <Compile Include="Misc\Vector2.cs" />
     <Compile Include="Misc\DataRegister.cs" />
     <Compile Include="Server\World.cs" />
+    <Compile Include="TDCM\QuestNPCType.cs" />
+    <Compile Include="TDCM\QuestType.cs" />
     <Compile Include="WorldMod\WorldGen.cs" />
     <Compile Include="WorldMod\WorldIO.cs" />
     <Compile Include="WorldMod\WorldModify.cs" />
