Created a ne wNPC Serializer dedicated for specific feilds & Added in Garbage Collections - Configurable

--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -57,10 +57,11 @@
     <Reference Include="TerrariaServer, Version=0.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <ExecutableExtension>.exe</ExecutableExtension>
-      <HintPath>..\..\TerrariaServer.exe</HintPath>
+      <HintPath>..\..\..\TerrariaServer.exe</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Serialize\NPCSerializer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialize\DiffSerializer.cs" />
