--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -58,7 +58,7 @@
     <Reference Include="TerrariaServer, Version=1.0.4.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <ExecutableExtension>.exe</ExecutableExtension>
-      <HintPath>..\..\..\TerrariaServer.exe</HintPath>
+      <HintPath>C:\TerrariaServer.exe</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
