[WIP] Languages + ReadMe update

--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -133,7 +133,7 @@
     <Compile Include="Collections\ItemRegistry.cs" />
     <Compile Include="Collections\Registries.cs" />
     <Compile Include="Definitions\Time.cs" />
-    <Compile Include="Language\LanguageFile.cs" />
+    <Compile Include="Language\Languages.cs" />
     <Compile Include="Messages\ChestItemMessage.cs" />
     <Compile Include="Messages\ConnectionRequestMessage.cs" />
     <Compile Include="Messages\HitSwitchMessage.cs" />
@@ -318,4 +318,8 @@
   <ItemGroup />
   <ItemGroup />
   <ItemGroup />
+  <PropertyGroup>
+    <PostBuildEvent>
+    </PostBuildEvent>
+  </PropertyGroup>
 </Project>
