--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -101,7 +101,7 @@
     <BaseAddress>4194304</BaseAddress>
   </PropertyGroup>
   <PropertyGroup>
-    <ApplicationIcon>TDSMROGO.ico</ApplicationIcon>
+    <ApplicationIcon>tdsm.ico</ApplicationIcon>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
     <PlatformTarget>x64</PlatformTarget>
@@ -307,7 +307,6 @@
     <EmbeddedResource Include="Definitions\Language.xml">
       <SubType>Designer</SubType>
     </EmbeddedResource>
-    <Content Include="TDSMROGO.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
@@ -317,7 +316,9 @@
   <Target Name="AfterBuild">
   </Target>
   -->
-  <ItemGroup />
+  <ItemGroup>
+    <Content Include="tdsm.ico" />
+  </ItemGroup>
   <ItemGroup />
   <ItemGroup />
   <PropertyGroup>
