--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -125,6 +125,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AI.cs" />
     <Compile Include="BaseEntity.cs" />
     <Compile Include="Commands\ISender.cs" />
     <Compile Include="Definitions\NPCType.cs" />
