--- a/Utility/Utility.csproj
+++ b/Utility/Utility.csproj
@@ -62,11 +62,18 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsistencyCheck.cs" />
     <Compile Include="Serialize\NPCSerializer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialize\DiffSerializer.cs" />
     <Compile Include="Serialize\Serializer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Terraria_Server\Terraria_Server.csproj">
+      <Project>{6B42E70C-75CD-410B-9D4A-3EA75B6F5176}</Project>
+      <Name>Terraria_Server</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
