--- a/Terraria_Server/Terraria_Server.csproj
+++ b/Terraria_Server/Terraria_Server.csproj
@@ -132,6 +132,7 @@
     <Compile Include="Collections\IRegisterableEntity.cs" />
     <Compile Include="Collections\ItemRegistry.cs" />
     <Compile Include="Collections\Registries.cs" />
+    <Compile Include="Logging\SendingLogger.cs" />
     <Compile Include="Messages\SpammableMessage.cs" />
     <Compile Include="Misc\InvasionType.cs" />
     <Compile Include="Misc\Time.cs" />
