--- a/TDSM_PermissionsX/TDSM_PermissionsX.csproj
+++ b/TDSM_PermissionsX/TDSM_PermissionsX.csproj
@@ -41,8 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Commands.cs" />
+    <Compile Include="Definitions.cs" />
     <Compile Include="PermissionsX.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Xml.cs" />
+    <Compile Include="XProperties.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Terraria_Server\Terraria_Server.csproj">
