--- a/TDSM_PermissionsX/TDSM_PermissionsX.csproj
+++ b/TDSM_PermissionsX/TDSM_PermissionsX.csproj
@@ -40,6 +40,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Auth.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="Definitions.cs" />
     <Compile Include="PermissionsX.cs" />
