--- a/TDSM_PermissionsX/TDSM_PermissionsX.csproj
+++ b/TDSM_PermissionsX/TDSM_PermissionsX.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Auth.cs" />
     <Compile Include="Commands.cs" />
     <Compile Include="Definitions.cs" />
+    <Compile Include="Languages.cs" />
     <Compile Include="PermissionsX.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Xml.cs" />
